--- a/md/總統府司法改革國是會議相關投書彙整.md
+++ b/md/總統府司法改革國是會議相關投書彙整.md
@@ -3914,7 +3914,7 @@
 
 ## articles
 ### 2017/05/01 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170501/1109113/
-- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170501/1109113/" target="_blank">【司改交鋒】以民主之名？</a></h2><p>張志偉、溫祖德／中信金融管理學院財經法律學系助理教授 </p><p>司法改革國是會議第二分組所通過的決議，依報載我國未來終審法院（最高法院及最高行政法院）法官將透過下列數個階段產生之：第一、由司法院長提名3倍人選。第二、接著經終審法官遴選委員會篩選剩下2倍人選。第三、再由總統任命。</p><p>依據決議之意旨，未來我國最高法院之法官之產生將由司法院產生，並透過遴選後，由總統任命之。而司法當局針對此發布新聞稿稱「….在選任的過程中，經由多元、專業組成的遴選委員會的遴選，以及法官終身職制度，一方面可增加法官民主正當性，另一面又可確保司法的獨立性。」並提及德國亦採之。實則，此實屬指鹿為馬之違誤。</p><p>《德國基本法》第95條第2項即載明：「該等法院法官（按：即五個最高層級聯邦法院）之選任，依事務性質，由該管聯邦部長會同法官選任委員會決定之，該委員會由各邦之該管部長與聯邦議會選舉同額之委員組織之。」依此，清楚載明聯邦最高層級法院法官（即五大法院系統）是由「法官選任委員會」所選出。</p><p>此一委員會共有32名成員，由16個邦所屬司法部長以及其他16名德國聯邦眾議院所選出的成員組成。聯邦司法部部長為選任委員會主席。而德國內閣制下的總統任命只是象徵、形式意義而已，並無實質選任權限。遑論我國總統與德國總統無論在任務或權限上均有著極大的差異性，並無可比較性。</p><p>其次，我國最高（行政）法院法官必須嚴守依法審判原則，其民主正當性係來自於依「法」審判，透過法律所傳遞的事物與內容的民主正當性來源，既無抗多數的疑慮，又何來想要藉由政治部門傳遞更多民主正當性的必要呢？就此民主正當性的傳遞模式，最高層級法院法官並無如司法院大法官有著「抗多數決」的正當性爭議，換言之，大法官之所以必須有政治部門參與選任，是考量到其任務與職權上必須審查立法行為，最高（行政）法院係依法審判，何須再由總統傳遞民主正當性。</p><p>末者，有論者認為此種產生方式可增加民主正當性，然而若問要增加民主正當性，莫不由國會直接行使表決權，以直接展現民主基礎，就以美國聯邦最高法院及聯邦各級法院法官之產生，亦由美國總統提名，經參議院之建議與同意任命……最高法院法官（美國《憲法》第2條第2項），同樣的選任程序亦適用上訴與初審法院法官，故由國會直接行使表決權更屬正當，上開司改決議為何捨此不為，實無從得知。但若僅由司法院長提名，再由遴選委員會遴選後，由總統挑選任命的制度，不但無法實現其民主正當性，更無法完全卻除該等法官政治任命或政治伸入司法的疑慮。相較於把最終決定權交由總統手段所可能帶來的負面效應，毋寧更應該著眼於在制度上強化遴選委員會的組織多元性與決議透明，以回應外界民主問責的疑慮。</p><p>雖然我國最高法院未如美國聯邦最高法院、德國之聯邦憲法法院主要職司違憲審查工作，但畢竟其為審級制之終審法院，主審諸多敏感及涉及政治性的司法案件(尤其是刑事案件)，如何使終審法院獨立於政治勢力之外，本於心證及良知而為判決，確保司法獨立性，應該是司法制度設計所絕對要奉為圭臬的最高原則。換句話說，司法獨立是一個絕對的價值，不能受到政治力絲毫的干預。質此，關於我國終審法官產生之制度應該用以確保實踐司法獨立性格，法官之產生不容有絲毫政治力介入之疑慮才對。</p><p>【即時論壇徵稿】</p> #張志偉 #溫祖德 #學者 #第二組 #最高法院法官晉用 #蘋果日報 #2017-05-01
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170501/1109113/" target="_blank">【司改交鋒】以民主之名？</a></h2><p>張志偉、溫祖德／中信金融管理學院財經法律學系助理教授 </p><p>司法改革國是會議第二分組所通過的決議，依報載我國未來終審法院（最高法院及最高行政法院）法官將透過下列數個階段產生之：第一、由司法院長提名3倍人選。第二、接著經終審法官遴選委員會篩選剩下2倍人選。第三、再由總統任命。</p><p>依據決議之意旨，未來我國最高法院之法官之產生將由司法院產生，並透過遴選後，由總統任命之。而司法當局針對此發布新聞稿稱「….在選任的過程中，經由多元、專業組成的遴選委員會的遴選，以及法官終身職制度，一方面可增加法官民主正當性，另一面又可確保司法的獨立性。」並提及德國亦採之。實則，此實屬指鹿為馬之違誤。</p><p>《德國基本法》第95條第2項即載明：「該等法院法官（按：即五個最高層級聯邦法院）之選任，依事務性質，由該管聯邦部長會同法官選任委員會決定之，該委員會由各邦之該管部長與聯邦議會選舉同額之委員組織之。」依此，清楚載明聯邦最高層級法院法官（即五大法院系統）是由「法官選任委員會」所選出。</p><p>此一委員會共有32名成員，由16個邦所屬司法部長以及其他16名德國聯邦眾議院所選出的成員組成。聯邦司法部部長為選任委員會主席。而德國內閣制下的總統任命只是象徵、形式意義而已，並無實質選任權限。遑論我國總統與德國總統無論在任務或權限上均有著極大的差異性，並無可比較性。</p><p>其次，我國最高（行政）法院法官必須嚴守依法審判原則，其民主正當性係來自於依「法」審判，透過法律所傳遞的事物與內容的民主正當性來源，既無抗多數的疑慮，又何來想要藉由政治部門傳遞更多民主正當性的必要呢？就此民主正當性的傳遞模式，最高層級法院法官並無如司法院大法官有著「抗多數決」的正當性爭議，換言之，大法官之所以必須有政治部門參與選任，是考量到其任務與職權上必須審查立法行為，最高（行政）法院係依法審判，何須再由總統傳遞民主正當性。</p><p>末者，有論者認為此種產生方式可增加民主正當性，然而若問要增加民主正當性，莫不由國會直接行使表決權，以直接展現民主基礎，就以美國聯邦最高法院及聯邦各級法院法官之產生，亦由美國總統提名，經參議院之建議與同意任命……最高法院法官（美國《憲法》第2條第2項），同樣的選任程序亦適用上訴與初審法院法官，故由國會直接行使表決權更屬正當，上開司改決議為何捨此不為，實無從得知。但若僅由司法院長提名，再由遴選委員會遴選後，由總統挑選任命的制度，不但無法實現其民主正當性，更無法完全卻除該等法官政治任命或政治伸入司法的疑慮。相較於把最終決定權交由總統手段所可能帶來的負面效應，毋寧更應該著眼於在制度上強化遴選委員會的組織多元性與決議透明，以回應外界民主問責的疑慮。</p><p>雖然我國最高法院未如美國聯邦最高法院、德國之聯邦憲法法院主要職司違憲審查工作，但畢竟其為審級制之終審法院，主審諸多敏感及涉及政治性的司法案件(尤其是刑事案件)，如何使終審法院獨立於政治勢力之外，本於心證及良知而為判決，確保司法獨立性，應該是司法制度設計所絕對要奉為圭臬的最高原則。換句話說，司法獨立是一個絕對的價值，不能受到政治力絲毫的干預。質此，關於我國終審法官產生之制度應該用以確保實踐司法獨立性格，法官之產生不容有絲毫政治力介入之疑慮才對。</p><p>【即時論壇徵稿】</p> #張志偉、溫祖德 #學者 #第二組 #最高法院法官晉用 #蘋果日報 #2017-05-01
 
 # 金恒煒
 ## backgrounds
@@ -4004,6 +4004,94 @@
 ### 2017/05/05 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170505/1111643/
 - <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170505/1111643/" target="_blank">【司改交鋒】王子榮專欄：被討厭的勇氣 談風向民調</a></h2><p>王子榮／雲林地方法院法官</p><p>日前台灣民意基金會發布民調，對於7類人民公僕好感度的排名，毫無意外敬陪末座的是法官，此一民調對於已經跌落谷底的法官群體無疑雪上加霜，可見每月不斷召開的司法改革國是會議，並沒有挽回人民對司法觀感的頹勢，社會上演變成集體獵巫氛圍，法官彷彿過街老鼠，但實際上司法（法官）有辦法討人喜歡嗎，如果結構上就是沒辦法讓人民喜歡，那民調的結果就不意外，司法好感度可能就是個假議題！</p><p>以民事訴訟和刑事訴訟為例，民事訴訟是人民私權紛爭，判決結果一定是一方輸、一方贏，輸的當事人難道會對法官服氣？更不用說是一部勝一部敗的結果，法官不就落得兩面不是人，而刑事訴訟程序是對人身自由最大的衝擊，那今天法官判你有罪、要入監服刑、剝奪人身自由，這樣的被告如何對法官有好感！</p><p>此外，台灣社會存在因法治教育未落實而產生的誤會，像羈押手段其實目的在保全證據、避免被告逃匿、對反覆實施的犯罪加以預防，但民眾往往把羈押理解為懲罰手段，一旦社會矚目案件法官沒有羈押，馬上千夫所指，但這不能怪民眾，實在是形塑法治教育的過程出現問題（缺乏正確的法普）。</p><p>還有人民對法官的圖像是什麼？很多人一定回答包青天，好個日審陽夜審陰，人死還可以觀落陰，偵查審判執行三位一體，但這跟現在訴訟制度格格不入；還有媒體移花接木的錯誤報導、政治人物消費司法行為（大喊司法不公），長期下來都讓社會不斷加深誤解跟敵意，這已經是結構性的問題。</p><p>那法官群體難道就沒有該反省的地方，千錯萬錯都是they的錯，當然不是！</p><p>首先法官過往自己對「法官不語」誤解，結果變成鮮少跟外界對話溝通，人民就越來越不了解法官想什麼。又在若干矚目案件我們可能會歷經10年才有辦法確定，在最高法院與高等法院間擺盪（更N審），鮮少看到最高法院能「了不起、負責」的擔起最終責任，而判決文字雖有專業門檻，但有多少法官還是改不了一些拗口的用語，「渠」、「矧」、「非不能」、「似無不合」、「尚非難謂」。</p><p>再者，刑度的量處過往都從最低度刑量刑，導致量刑上即使司法院目前透過「量刑資訊系統」加以整理，仍會陷於整體刑度過低等弊病。還有司法對於內部轉型正義避而不談，過往法院系統曾經存在著院長指揮辦案、干涉審判獨立，造成一批法官藉著這樣的機會關說案件，是一直到台中303法官自治運動後才產生巨大變革，這樣的歷史必須正視，以上都是法官群體必須反思的。</p><p>只是在司改國是會議紛擾之際（議題超載、若干委員退出、總統和籌備委員間的永不公開談話黑箱疑雲），台灣民意基金會卻又刻意放出國人厭惡法官的民調消息，是在為可能失敗的司改國是會議找戰犯嗎？除了要為執政者帶風向外，實在想不出有何意義，在上開結構因素未調整前，怎樣的民調結果都會是一樣。法官工作內容難以取悅他人，是宿命、也是原罪，是司法性質天生抗多數決的困境，即使被討厭，還是要勇敢佇立，更該藉機反省。</p><p>更多王子榮文章</p> #王子榮 #法官 #司法與人民脫節 #蘋果日報 #2017-05-05
 
+# 郭豫珍
+## backgrounds
+- 法官
+
+## articles
+### 2017/05/06 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170506/1112415/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170506/1112415/" target="_blank">【司改交鋒】高院法官郭豫珍：聚焦正義 司改才有意義</a></h2><p>郭豫珍／台灣高等法院法官</p><p>何謂「國是」？國是會議所議必具國家重大政策一定的格局與莊嚴。司改國是會議究竟要談甚麼？希望形塑的核心價值又是甚麼？從去年11月25日召開第一次籌備會議迄今，喧騰近半年，除了部分召集人的失格、委員的失態，最令國人失望的還是，議題的失焦。</p><p>回頭檢視總統有關談話：「判決為人詬病的原因，包括司法人員的品德操守不佳、未堅守公正性、公平性與獨立性、裁判品質及效率低落、審判及起訴標準因人而異，以及濫行簽結、起訴及上訴等等。」雖然這樣的論述流於主觀、以偏概全，但如抽離操弄性的情緒敘述，這段話歸整起來，所要呈現的，其實就是國人長久以來對司法體系最基本的期待：「公平正義」。司法要改革，就須以此為起點，並應以有效解決上述問題為依歸。所有議題都應聚焦實現司法的「公平正義」；否則，充斥著柴米油鹽蔥薑蒜，盡是搭順風車的泛論雜議，所謂的國是會議，將毫無意義。</p><p>問題是「公平正義」是甚麼？美國丹諾律師堅稱：「這個字眼無法被定義，只能被感受。」日本法學者橫川敏雄則指出了一個非常關鍵的內涵：「所謂JUSTICE一辭，除了具有公平正義的意義外，尚包含裁判以及裁判官的含意在內。正義不是固定不動的概念，而是根據個別存在的現實狀況去思考、探討出來的。」換言之，在訴訟過程中，利害關係相對立的雙方當事人，基於公平競爭的精神，以攻擊防禦的形成，在主觀性正義相互論爭的基礎下，由公正無私的法院加以發現者，就是正義。</p><p>「公平正義」不會出現在《刑法》條文中，也不會在口沫澆灌下自然成長，更不可能以隨機抽取的少數國民的偶然組合形成真理。法律的生命不在於理論邏輯，而在於日積月累的經驗。制度改革固然重要，但累積一個個單一個案正義的實際體驗，可能更具說服力。</p><p>衡平而論，法院判決會吸引國人關注的大多是刑事案件，各級法院刑事審判終結案件每年數十萬件，真正引起「議論」的不過極少數個案。而不管白玫瑰運動也好，八里雙屍命案、鄭捷隨機殺人案也罷，乃至其他被反覆炒作的個案，人民不滿的究竟是甚麼？是事實的認定？還是罪的有無？恐怕都不是，即使有，充其量也是一二。</p><p>其實，大家最關切的，絕大部分都屬量刑的高低。當眾人皆曰可殺，法院卻以可教化為由饒他不死，這是量刑問題；當千夫所指應予重判，如販毒、酒駕、電信詐欺……等，法院卻拂塵輕揮，這也是量刑問題；即使是否給予緩刑、定執行刑多寡……，無一不是量刑問題。</p><p>然而，細索國是會議的近百項議題，對此一真正影響司法形象至深且鉅的關鍵，仍然未予必要的重視。唯一觸及此議題的，只有5月4日第五分組第五次會議的「量刑準則的建立」，而檢視相關發言與結論，不過是司法院已執行多年的措施。問題是量刑實務問題的癥結何在？延伸配套制度缺失為何？如果不能從根本檢討提出有效對策，囫圇吞棗地建置量刑因子與趨勢建議，除了顯示認知的淺碟又如何？</p><p>最後總結未出，失落與失望也許言之過早，我們仍衷心期盼司改委員能靈光乍現，點亮奇蹟，不負國人重託。</p> #郭豫珍 #法官 #議事程序 #蘋果日報 #2017-05-06
+
+# 李佳玟
+## backgrounds
+- 學者
+
+## articles
+### 2017/05/08 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170508/1113698/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170508/1113698/" target="_blank">【司改交鋒】李佳玟：法務部長的耍賴功力</a></h2><p>李佳玟／成功大學法律系教授</p><p>媒體報導，法務部長邱太三於五月一日視察台北地檢署，受到檢察官的熱烈歡迎。邱部長特別稱讚身兼司改國是會議代表的檢察官林達，肯定他能說能寫，笑說唯一不足的就是林檢察官不太會耍賴，「不像部長就比較會耍賴」。</p><p>身為司改國是會議的同組委員，在開會過程中充分感受到邱部長的耍賴功力。譬如第五次分組會議中關於檢察總長的任命方式，邱部長反對檢察總長的任命需要經過立法院同意。他舉出當年謝文定​、陳聰明、黃世銘三人的情況，說明如果讓立法院同意會有什麼問題，也說現在由立院同意的任命方式讓檢察總長欠總統人情。但他除了反對林孟皇法官的改革提案，卻沒提出任何方案，改革他從當立法委員開始就認為的爛制度，放任檢察體系的龍頭未來繼續欠總統人情。</p><p>在討論法務部長對於檢察人事的圈選權時，邱部長有時說他不喜歡有圈選權，點頭同意讓主任檢察官以票選方式產生。有時他又對於人事圈選權寸步不讓，逼問提案者要是檢察官票選選出來的檢察長他都不滿意，他一定要接受嗎？邱部長每次的發言，乍聽都會覺得頗有道理，但合在一起卻讓人困惑──邱部長到底是喜歡還是討厭檢察人事圈選權？他為什麼只願意鬆手主任檢察官的人事，接受檢察官自治，卻對於檢察長的人事寸步不讓？更重要的是，檢察人事應該取決於法務部長的喜好嗎？一個可以讓檢察權行使公平、有效能，且可以權責相符的人事制度應該怎麼設計？</p><p>了解檢察體系生態的人都知道，政治力是否可以影響檢察體系，檢察長是關鍵。在檢察一體的結構下，檢察官所有起訴、不起訴的決定必須要經過主任檢察官與檢察長。一般的案件，檢察長通常授權襄閱檢察官處理，但就重大案件，在搜索前，基層檢察官會跟主任檢察官與檢察長討論。至於羈押，檢察長甚至有可能直接下令基層檢察官聲押某人，即便檢察官連要證明該人犯罪嫌疑重大都有困難。所以，控制檢察長就等於控制檢察官。</p><p>事實上，控制通常不需要明白的下令，檢察長有心想要討好當局也就夠了。對於檢察官而言，只要看到討好政客當局的檢察官平步青雲，不當聲押的升主任檢察官，下令聲押的檢察長到某個高分檢等待接高檢署檢察長，不管外界怎樣質疑。檢察官怎樣才可以升官，脫離基層的過勞地獄，邁向美好的未來，大家都能心領神會。</p><p>對於政客而言，檢察官只有好用與不好用之分。政客完全不在意，檢察官這麼好用，代表自己未來下台之後，可能受到司法追殺。政客以為，只要在下台之前，把京畿重鎮的檢察人事安排妥當就可以高枕無憂。殊不知，願意當政治打手的檢察官不一定有政黨忠誠，為了升官，可在不同政權下配合起訴。再不然，新任的法務部長也有調動檢察長的權限，總是可以把前朝的人調離檢察長的位置，然後得償宿願，換上聽話的自己人。</p><p>只是要解決上述政治干預檢察體系的問題，倒也不是完全拔除法務部長對於檢察長的人事圈選權。制度上之所以賦予法務部長的檢察人事權，是為了讓檢察官能夠貫徹國家刑事政策的使命。由於負有政策使命，檢察體系自始無法與政治切離關係。只是，倘若給予法務部長太多的人事權力，可能會干擾檢察權的公正性。因此，為了讓檢察權能公正行使，檢察體系必須具有相當的獨立性，除了個別檢察官必須受到如同法官的身分與薪資的保障，以及採行檢察一體的陽光監督制度之外，在人事晉升或是檢察事務的處理分配上，也必須給予基層檢察官相當的自治權力。</p><p>這正是林孟皇法官為何提出先由基層檢察官票選檢察長，再由法務部長圈選之改革方案的原因，目的希望兼顧檢察權的公正與權責相符。但邱部長反對，理由是會限制他的選擇權，未來怎麼要他負責。即便現行制度下檢察長的產生方式是由檢察人審會提出兩倍人選，他卻不認為檢察人審會會提出他不能接受的人選，顯然檢察人審會無法對於法務部長的人事權做有意義的控制。另外，在制度上說不清楚的是，法務部長到底要怎麼為檢察權行使不當負責？過去的部長有為檢察官濫權追訴負責嗎？曾經為發生過這麼多貪贓枉法的檢察官下台嗎？如果法務部長的下台自始至終都是取決於當局的喜好，法務部長是不是從以前到現在對檢察體系只有權，而沒有責？</p><p>邱部長為了維護檢察官的司法官身分，的確相當認真。但檢察體系受到政治干預，因此被質疑不獨立不公正，卻是檢察體系的痛。基層檢察官在給邱部長掌聲之餘，是否容許邱部長在檢察人事問題上繼續耍賴？期待檢察體系不受政治干預的大眾呢？是否也容許誓言進行司法改革的蔡英文政府，繼續在檢察人事的問題上對台灣社會耍賴？</p> #李佳玟 #學者 #第三組 #檢察官定位 #蘋果日報 #2017-05-08
+
+# 何飛鵬
+## backgrounds
+- 其他
+
+## articles
+### 2017/05/08 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170508/1113703/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170508/1113703/" target="_blank">【司改交鋒】何飛鵬專欄：不吵不鬧的司改 不改也罷</a></h2><p>何飛鵬／城邦媒體集團首席執行長</p><p>司法改革國是會議召開迄今，給人的印象就是「亂」，從委員人選到分組，到議題，到委員選擇退出，到改革方向涉及總統擴權，面對如此複雜多元的改革議題，許多人擔心，此次司改將如何收場，會不會成為台灣政壇上最大的笑話。</p><p>身為司改會的一員，我從頭參加了每一次的會議，我完全不會為吵鬥爭議擔心，反而我認為吵鬧爭辯，各持己見，甚至一時出軌的意氣用事，惡言相向都可能是此次司法改革的必經的過程。如果司法改革一團和氣，順利進行，達成協議，這反而是我擔心的，因為不吵不鬧的司改，要不是改革不碰觸敏感議題，就是早在有心人的掌控之下，導引到既定的方向，不吵不鬧的司改，那不改也罷。</p><p>為何司改必定吵鬧？因為司改領域，涉及各種利益團體的衝突；司法院法官體系是利益團體，法務部檢察官是另一利益團體，而執業律師又是另一利益團體，媒體看起來是第三者，但其實介入司法也極深，而社會大眾對現行的司法體系也有諸多不滿，改革之聲甚囂塵上，這些團體對每一個司改議題，都各有堅持，任何議題，都必須歷經極尖銳的爭辯折衝，最後才有可能達成決議，因此過表中的衝突，擦槍走火，意氣用事，惡言相向，都在所難免。</p><p>這其中就算有人退出，但每組近20人，全部近百人的會議，最後只要能達成多數決的共識，這一定是有意義的決定。</p><p>而且從此次司改的開會目的設定，也注定了此次司改必定大鳴大放的結果，小英總統在成立司改會議時，參與人選就廣納各方能人異士，這些委員各有主場，且多堅持自己的信仰，而且改革議題就是要讓人民有感，所有的議題皆可談，所以注定了議題大爆炸的結果，其目的就是要為現行的司法體制做一次深度的總體檢，徹底檢討司法體制的諸多沉痾，並提出具體的改革作為及方向。</p><p>過程有人擔心，如此包山包海的司法改革，最後將如何善後，這麼多的議題，真能做一次性的改革嗎？又台灣的司法體制，禁得起如此大規模的改革嗎？</p><p>這些顧慮當然值得思考，不過從司法改革的開會流程，其實早已預作議題收斂的安排。</p><p>司法改革的五組分組會議，分別就人權、信賴、效率、友善及保障弱勢深度討論，這是對司法體系的總體檢，不放過每一個細節，也不迴避敏感的議題，這是不設限的發散討論過程，每一個組都提出了許多議題，然後選擇其重大者進行討論做成決議，這是一個充分發散的討論過程，預計5個組將有可能提出數十個大大小小的改革意見。</p><p>而到了最後的司法改革的總語會議時，將由總統親自參與，進行最後的歸納與收斂，要從所有的改革意見中，依重要、緊急，對人民有感，推動的難易度及可行性等原則，進行綜合性的評估，選出此次司法改革第一優先必須推動的改革方向，這就是總統會議的收斂功能，做出真正可行，讓人民有感的司法改革作為。</p><p>至於未被列入第一優先改革的項目，則分門別類，有的列入司法院及法務部未來的推動方向，有的則等待下次的司改。</p><p>吵鬧的司改，代表碰觸了所有的敏感議題，司改考驗了台灣社會是否有能力在爭議中化解歧異，找到共識的可能。</p><p>更多何飛鵬文章</p> #何飛鵬 #其他 #議事程序 #蘋果日報 #2017-05-08
+
+# 劉昌坪
+## backgrounds
+- 律師
+
+## articles
+### 2017/05/11 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170511/1116603/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170511/1116603/" target="_blank">【司改交鋒】劉昌坪專欄：當法庭活動成為慢動作</a></h2><p>劉昌坪／理律法律事務所律師</p><p>近日司法改革國事會議正如火如荼舉行，「防止媒體不當報導」、「檢察官究竟是行政官還是司法官」、「最高法院員額精簡及任命方式改變」等議題均成為媒體報導的焦點，亦引發正反不同見解的討論。但全國法庭內每天正在進行數以萬計的審判活動，才是真正決定當事人權利義務的司法戰場。</p><p>然而無論民事、刑事或行政訴訟，都高度仰賴筆錄的記載內容（參照《民事訴訟法》第219條、《刑事訴訟法》第47條、《行政訴訟法》第132條規定）。《刑事訴訟法》第49條更明定：「辯護人經審判長許可，得於審判期日攜同速記到庭記錄。」因此筆錄對於訴訟勝敗無疑扮演舉足輕重的角色，人民的訴訟權能否獲得充分保障更與筆錄的記載方式息息相關，司法改革自不能忽視此一議題。</p><p>眾所周知，美國法院的筆錄記載向來力求及時和正確。美國法院有關法庭程序的記錄，可參考《法庭記錄員法案》（The Court Reporter Act）。依該法規定，各州地方法院均應設置1人以上的「法庭記錄員」，原則上所有在公開法庭進行的程序，都應被逐字（verbatim）記錄。</p><p>喜歡觀賞美國法庭電影或影集的民眾都知道，美國法院開庭時，當事人可以用流暢的表達方式完整陳述，無論是法官、兩造律師或陪審團，都可以在聆聽的同時，仔細觀察陳述人的表情，甚至是皺眉、握拳或眼神閃爍等小動作，以便「察言觀色」。</p><p>但反觀我國法院，每天上演的場景卻是法官不僅要問案，更要時常口述要旨，指揮書記官繕打「精簡版」的筆錄，有時為了等待打字，律師、證人和當事人的陳述也必須被迫中斷，大家全都目不轉睛盯著電腦螢幕上的文字，確認內容正確且無遺漏之後，才敢繼續陳述，不僅大大削弱詢問證人和言詞審理的功能，亦無法滿足讓當事人可以流暢進行法庭活動的基本要求。</p><p>或許有人認為漢字較不容易及時記錄，但是同樣使用漢字的大陸，以北京法院為例，就設有專門的速記員，開庭時所有參與者都可以用「正常語速」說話，無須為了等待打字而讓法庭活動成為慢動作。此外，浙江省高級人民法院亦已於2016年6月，引進人工智慧系統進行筆錄製作，不僅可將法庭對話同步顯示在電腦螢幕上，準確率更高達96.2%。</p><p>一般人的正常語速約為每分鐘160字至200字，受過專業訓練的速錄師，每分鐘可以記錄的字數在此之上。負責督導數位經濟與網路產業的政務委員唐鳳，去年10月出席立法院的電競公聽會時，即曾偕同速錄師到場，以便清楚記下每位參與者的發言內容。速錄師一分鐘可以紀錄260字以上，最快可達400字，因此透過速記方式記錄法庭審理活動，事實上並無困難。我國的中華民國仲裁協會多年來亦透過速錄師的協助，繕打每次仲裁庭的逐字稿，不僅快速，內容的完整度和正確性亦極高，深獲實務所肯定。</p><p>筆錄製作要符合「及時、真實、完整」這三項基本要求，並無困難，關鍵在於政府是否願意採取具體措施，改善法院的筆錄製作方式。</p><p>法院書記官雖然亦受過打字訓練，但尚須負責整理卷宗、辦理法官交辦事項、寄發各種通知及聯絡當事人等重要事務。法庭記錄相對較簡單，只要透過聘請速錄師、使用新科技，或將打字業務外包予專業公司，根據開庭錄音逐字繕打，即可解決此一問題，同時亦可讓書記官專心協助法官進行審判活動。</p><p>筆錄的記載如過於緩慢，不僅增加審理時間，消耗寶貴的司法資源，更將導致直接審理（現場聽言觀行）淪為間接審理（大家都盯著電腦螢幕看），更何況訴訟程序的目的無非是希望發現法庭外的「真實」，但如果連法庭內的「真實」都無法呈現，而僅是淪為過場形式，實係對司法程序的一大諷刺。</p><p>【即時論壇徵稿】</p><p>更多劉昌坪文章</p> #劉昌坪 #律師 #書記官 #蘋果日報 #2017-05-11
+
+# 李佳玟
+## backgrounds
+- 學者
+
+## articles
+### 2017/05/11 GMT0+8:00 http://www.upmedia.mg/news_info.php?SerialNo=16875
+- <h2><a href="http://www.upmedia.mg/news_info.php?SerialNo=16875" target="_blank">法務部長轉移議題的功力</a></h2><p>司改國是會議第三小組第六次會議有個奇異的開場。法務部長邱太三花了好些時間指控本組委員對他進行人身攻擊。他用「某委員」講了半天，最後終於點名我，指控的是我在5月8日刊登在蘋果日報的一篇文章《法務部長的耍賴功力》對他進行人身攻擊，居然還把這篇文章放到開會資料裡。</p><p>作為一個從會議之前到昨天為止一直飽受各式人身攻擊的人，邱部長的指控讓我感覺諷刺。不知道是不是自己被抹黑、誣賴與攻擊久了，對於人身攻擊這件事比較遲鈍。為此我還很誠懇地請問我旁邊一位德高望重的委員，他笑笑的跟我說不會啦，說或許有人比較敏感。</p><p>不過如果我們不想同樣落入那種「被性騷擾的人都是自己太敏感」這種邏輯，我們還是可以本質地來研究一下，我的那篇文章到底講了什麼，使得這個在政壇裡翻滾多年的邱部長跳起來，指控一個陽春教授對他的質疑是人身攻擊？</p><p>我的那篇文章，用了邱部長在公開場合與攝影機前對自已的描述（「不像部長比較會耍賴」），來概括作為同組開會的我，對邱部長在兩個關鍵議題上說理不一致的感覺與疑惑，那兩個關鍵議題就是檢察總長與檢察長的任命方式。</p><p>我說，在檢察總長的任命方式上，邱部長反對檢察總長的任命需要經過立法院同意，他說這種任命方式讓檢察總長欠總統人情。但他除了反對改革者的提案，卻沒提出任何方案，放任檢察體系的龍頭未來繼續欠總統人情。我們難道不能知道，檢察官體系出身，又擔任過立法委員的邱太三部長，對於檢察總長任命制度的想法究竟是什麼？檢察總長作為檢察體系的龍頭，檢察體系的改革是這次會議的重點，在這次司改國是會議卻沒有被法務部長推薦為檢察體系的代表，我們聽不到檢察總長的意見，難道不能追問現任法務部長？</p><p>我又說，在討論法務部長對於檢察人事的圈選權時，邱部長有時說他不喜歡有圈選權，點頭同意讓主任檢察官以票選方式產生。有時他又對於人事圈選權寸步不讓，逼問提案者要是檢察官票選選出來的檢察長他都不滿意，他一定要接受嗎？邱部長讓人不由得想追問，他為什麼只願意鬆手主任檢察官的人事，接受檢察官自治，卻對於檢察長的人事寸步不讓？</p><p>三一八學運前後幾年的台北地檢署的情況，讓大家發現檢察長正不正直的重要性。之後該檢察長的調動狀況，也讓人看到檢察人事調動的玄機，以及政治如何在人事任命權上干預檢察體系。作為關心檢察權之公正性的人，難道不能追問那個對於立法院有強大遊說能力，也前後發新聞稿攻擊司法院提案權，想要獨拿刑事法案提案權的法務部首長，對於檢察長的人事任命，他有什麼改革意見？還是覺得給基層檢察官票選主任檢察官的權利，已經很有改革誠意了？如果主任檢察官還是受制於檢察長，這樣的改革實質意義是什麼？</p><p>我在文章還進一步地從過去的狀況，追問過去曾有部長為檢察官濫權追訴負責嗎？曾有任何法務部和檢察體系的長官為了貪贓枉法的檢察官下台負責？這幾天才有一個「史上最兇殘的檢察官」被判刑，但法務部與整個檢察體系表現得這件事跟他們一點都沒有關係。我想知道，如果法務部長的下台自始至終都是取決於當局的喜好，法務部長是不是從以前到現在對檢察體系只有權，而沒有責？法務部長口中的權責相符，事實上只是讓他維持既有權力而已？</p><p>邱部長擔任法務部長，其在司改國是會議代表的就是法務部，即便不是作為同組委員，作為公民的我也有權利質疑法務部長的改革誠意。檢察體系內的人事問題與檢察權是否公正息息相關，這些問題，不能被逃到「人身攻擊」這四個字裡。邱部長或許可以在「耍賴」這兩個字大做文章，真的因為這兩個字感覺受傷我也可以道歉，但我所提出的檢察人事議題不能被個人化，不能用個人化的方式被迴避。</p><p>與其說這是一個委員對另一個委員的人身攻擊，不如說是公民對於法務部長在重要檢察人事議題上之個人理念一致性的質疑。與其說是針對個人，不如說這是針對法務部長這個位置的挑戰。事關檢察體系的公正性，請法務部長不要移轉議題。也請宣稱要進行司法改革的民進黨政府，不要跟著一起逃避議題，全民都在看。</p><p>【延伸閱讀】</p><p>【司改第三組會議】引進兼職法官制度 去除恐龍與三門法官</p><p>李佳玟：鳥籠司改危機－檢察體系權責問題都被拋在腦後</p><p>檢察官定位的關鍵問題</p><p>誰在玩「老把戲」? 從檢改會要檢察官代表退出司改會議談起</p><p>【司改變革】防杜「檢察一體」行關說之實 檢察長介入個案指揮需以書面行使</p><p>※作者為成功大學法律系教授</p><p>上報</p><p>上報熱門圈</p><p>上報評論圈</p> #李佳玟 #學者 #第三組 #檢察官定位 #上報 #2017-05-11
+
+# 張維志
+## backgrounds
+- 其他
+
+## articles
+### 2017/05/13 GMT0+8:00 https://www.facebook.com/photo.php?fbid=1375586065810866&set=a.180017622034389.32603.100000784566673
+- <p>司改國是會議我們這一組，在昨天進行了最後一場會議，從早上九點半到晚上六點半，花了一整天的時間來討論最後的幾個議題。在這一天的會議中，和我相關的有兩個，一個是裁判書套上資訊與知識管理的概念來協助法官寫出更友善更親近的裁判書。另一個是之前有提案表決過，但是我認為問題根本沒有被解決的，4-3-3 律師市場資訊公開（以提升律師服務品質）</p><p>之前的提案 : 法務部所建置的律師資訊查詢系統應予公開，其中律師受懲戒資訊，除停止執行職務及除名的懲戒處分，應公開至受懲戒人死亡之時為止，其餘懲戒處分，於執行五年後不公開。</p><p>第一，法務部沒有什麼律師資訊查詢系統。目前只有一個類似名錄的查詢。律師公會公佈的可能會資訊更多</p><p>第二，只要公佈過的資訊，就不可能從地球上消失。所以我們有被遺忘權的爭議。現在這種五年後不公佈的作法，到底是要幹嘛？（後來許玉秀老師告訴我，這是一種政府表態的方式。對這一點，我接受這樣的說法）</p><p>第三，這個主題是要問律師市場資訊公開，法務部司法院等也有針對這些議題提出回應，我們還邀請了民間學者（張永健老師）來協助釐清裡面的問題。結果最後只能提出這樣的提案？</p><p>這我當然完全不能接受！我認為，</p><p>第一，必需要更清楚的規範該公佈的資訊（所以律師收費是不是個該處裡的問題？律師專業是不是個很重要的議題？）</p><p>第二，必需要說明清楚這樣的資訊該由誰主導建立（我不認為一定需要是法務部。但是一定要有人負責不是嗎）</p><p>第三，公佈出來的資訊，我們是否可以延伸應用。也就是，應該從資料加值的角度看這些資訊，不是從「管考」的角度來限縮這些資訊的適用情境（簡單的來說，我們能不能有更多類似評律網的服務出現？同時是可以廣告和收費的？）</p><p>為了回答這些問題，我去找了許多相關資訊，也看到了許多現有的資訊公佈方式。</p><p>我希望直接處裡這三個問題。許玉秀老師（我真的很感謝她這次司改國是會議的幫忙）也幫我擬出一個提案。但是，其實在前幾天的 line 上討論，我就開始感覺到我們這組的其他律師，對這樣的議題和提案都是排斥與反對的。每個人都直接告訴我不可能。那可能的是什麼？這就如法庭直播一樣，我們都知道很多原因所以不可能。但是誰能來跟我說，在哪種情況下，直播就可能了？（剩下的很多都是技術問題，針對這議題，我們花了很多時間討論技術問題卻不去談不同價值之間的衝撞。這也是蠻奇怪的事情）</p><p>已經有現成的範例告訴我們，我提的內容不是不可能，但或許不是每個律師都願意如此做。那不就該回過來問（就如法庭直播）我們的目的是什麼，是否真的該如此去做嗎？</p><p>我的目的很簡單，促進律師市場資訊透明公開，讓律師市場回歸正常的市場機制。而要有一個正常的市場機制，資訊揭露，避免資訊不對稱就是最重要的事情。</p><p>所以為了促進這樣一個健康的市場機制的出現，我們該怎麼做來協這「律師們」！願意主動揭露的，我們能不能给他們更好的廣告服務（對，律師為什麼不能打廣告，律師的專業為什麼不能被檢驗），讓他們在市場競爭中，能有更多的優勢？</p><p>我從來沒說，政府該強制去做任何的規範。我也從來沒說，為了達到這樣的目的我們就該罔顧個人隱私的保護。我只問，這是不是該做，是的話，我們該如何去做。</p><p>結果就是，我的提案在會議上被吳光陸律師修改，提出一個我認為叫做廢話的東西。</p><p>六、建請中華民國律師公會全國聯合會建置以民眾需求為導向的律師資訊公開系統。</p><p>我們變成回到律師們請自律的方式來談這樣的議題。</p><p>當我看到這，我整個非常怒。我也直接在會議上斥責那兩位反對的律師根本搞不清楚狀況（好像還有拍桌）。結果事後我才知道，這兩位律師中，真的有一位完全不知道我想說什麼... 這沒有讓我心情更好，只是更怒！我花時間找資料，跟你們討論。結果你在最後才告訴我，你誤解我了？</p><p>也因此才有昨天的那些發言。我不後悔寫出這些東西也不怕被拿去檢視。我只對那些提出問題，希望我們能協助他們找到解決方法的人，要說聲抱歉。我沒想到會是這樣結束。</p><p>----</p><p>我參加司改國是會議，是希望把我在開放資料的專業帶進來。我以為我只需要提供我專業的意見來協助即可。結果我發現，針對很多議題，每個人都有自己的 agenda。而這些 agenda 對我來說根本都是有問題的，都是過時或是對議題只有非常簡單的想法下提出的解決方案。但是透過資訊科技，我們真的可以做到更多，很多以前的問題在今天都不會是問題了。相對的，我們也有許多新問題該被處裡。</p><p>結果就是，我必須花很多時間，自己去把問題找出來（謝謝多位在這段時間協助我的朋友，也包含幾位律師），自己去思考這後面可能的處裡方法會是什麼，然後自己想辦法定出一個可能的解決方案（可行的）。我要花時間去找盟友（願意支持我的想法的人），包含政府內與政府外的。然後瞭解他們的需求後，提出一個不會被看成是笑話的提案。</p><p>如果我真的要對這場司改國是會議做評論。那會是，我們拿著以前開會的方式，以為很多問題大家聚在一起就可討論出結果做出決定。我們須要更好的協助與參與模式，我們也真的可以針對這樣的議題，提出更多有用的建議。</p><p>在這三個月期間，我看到許多非法律人努力參與與到處尋求協助，因為不想被視為只是這個專業的議題下的花瓶。司改國是會議主辦與籌備，你們真的欠這些認真的委員一個公道...</p><p>下面這張圖，是某個律師事務所自己公佈的收費標準。用律師收費標準來查 google，還可以看到其他零星散落的相關資訊。所以不要跟我說，這是做不到的，也不要跟我說，每個人的狀況都不一樣。那只是因為，你們根本從來沒想過該這樣做。是不是和你們一直說要改革的對象，我們對他們的批評一樣？</p> #張維志 #其他 #第四組 #律師資訊公開 #其他平台 #2017-05-13
+
+# 魏偕峯
+## backgrounds
+- 檢察官
+
+## articles
+### 2017/05/13 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170513/1117781/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170513/1117781/" target="_blank">​【司改交鋒】檢察官：「副檢察官制度」是改善「恐龍司法官」之良藥？</a></h2><p>魏偕峯／雲林地檢署檢察官</p><p>日前，在司法改革國是會議中，法務部有提出「副檢察官制度」，用以解決濫訴問題；且先前會議中針對「法律人的考選訓練」達成共識，未來法律專業資格取得應一體化，通過考試後，實施1年實務培訓，1年結訓及格後，先取得律師資格，各依需用名額及成績、志願分別進行法官、檢察官口試，錄取者分發為候補法官、候補檢察官，候補期間5年，其中2年至院檢以外國內外機關團體(例如NGO)歷練。候補期滿者，遴選一定比例任用為試署法官、檢察官。</p><p>目前法官錄取率約1%左右，錄取者平均年齡約26歲，導致於社會上輿論常質疑新進司法官缺乏社會經驗及工作歷練，卻要斷人是非、定人生死，屢遭外界批評是「奶嘴法官」、「娃娃法官」。實務上，曾發生有男子對女子襲胸長達10秒，被檢方依強制猥褻罪起訴，在法院審理時，以襲胸時間過短，被害人無受害感為由，判決無罪，而引發社會譁然；但檢方上訴後，二審才改判有罪之案例。</p><p>針對司法官之考訓方式，筆者建議下列方案，供法學先進及立法者參考：</p><p>針對上述會議結論，進行微幅調整，在候補5年期間的後面3年，除了協助法官和檢察官辦案，如草擬裁判書、起訴書等學習之外，無論是候補法官、候補檢察官皆須先擔任「副檢察官」至少1年後，才算完成5年訓練，嗣再遴選一定比例為法官和檢察官。</p><p>換言之，此方案係將法務部目前正研議中之「副檢察官制度」予以採用，且更甚而，可考慮採認先前有法學先進所提出「開放檢察事務官轉任副檢察官方案」。而採此方案之優點為：</p><p>1. 讓候補法官也能與候補檢察官一樣，皆能實際了解偵查第一線實務及民情，有助於未來審判之正確性。</p><p>2. 補充檢察不足人力，將簡易及濫訴案件交由「副檢察官」來處理，先進行案件分流，讓檢察官能有更多心力去處理中大型案件(並搭配筆者先前曾提倡就一部分刑事案件〈告訴乃論之罪、個人財產法益〉，修法採取「告訴之強制律師代理制度」、或「告訴前之強制調解制度」，始能分別從濫訴案件之源頭及後端控管及處理，雙管齊下)。</p><p>3. 使檢察官之選任來源多元化，因為檢察事務官之考試分為「偵查實務組」、「財經實務組」、「電子資訊組」、「營繕工程組」等不同領域人才。</p><p>4. 使具有一定年資、經驗、協助辦案表現而符合資格之檢察事務官，能有機會先晉升為「副檢察官」，甚而再晉升為「檢察官」，讓檢察事務官有晉升管道，活絡職等晉升體系及工作士氣。</p><p>套句美國知名前大法官霍姆斯（Oliver Wendell Holmes）的經典名言，「法律的生命不在邏輯，而在於經驗」。要消除當前民眾對「恐龍法官」之疑慮，確有需要增加對司法官考訓階段之訓練，並搭配上述之「副檢察官制度」、「告訴之強制律師代理制度」、或「告訴前之強制調解制度」，始能完整配套制度，提升司法信賴度，嗣並期待法學先進及立法者共同努力之。</p><p>【即時論壇徵稿】</p> #魏偕峯 #檢察官 #第三組 #檢察官人事 #蘋果日報 #2017-05-13
+
+# 李靜修
+## backgrounds
+- 其他
+
+## articles
+### 2017/05/13 GMT0+8:00 http://www.appledaily.com.tw/realtimenews/article/forum/20170513/1117878/
+- <h2><a href="http://www.appledaily.com.tw/realtimenews/article/forum/20170513/1117878/" target="_blank">【司改交鋒】民眾觀點：國家賠償法第13條應修法</a></h2><p>李靜修／高中教師</p><p>很高興司法改革國是會議有委員提出廢除《國家賠償法》第13條。但拜讀了法務部的意見後，發現法務部並不接納這個建議。</p><p>筆者認為《國家賠償法》第13條的確嚴重限縮訴訟當事人在蒙受法官在執行審判職務時對人民侵權時的求償權利。法務部雖然聲稱有上訴、再審等救濟制度，但問題就出在有些法官的侵權行為就出現在無法上訴的案子上；我國在民事訴訟上的再審條件過於嚴苛，幾乎公布在司法院網站上的聲請再審案例沒有一件被允許的。而且很多人透過自訴提告枉法裁判，但都一律遭法院以「枉法裁判罪不得提起自訴」駁回。但，又有什麼檢察官敢去起訴同僚或法官枉法裁判？</p><p>筆者認為除了「有罪」這個條件，《國家賠償法》第13條應增列法官因執行審判職務有重大違失致判決錯誤、侵害當事人權益，經職務法庭判決懲戒，當事人得提起國家賠償。</p><p>就像有些妨礙名譽罪，不見得嚴重到構成《刑法》「誹謗」罪，但卻是《民法》的「妨礙名譽」侵權行為。法官的錯誤判決不見得到《刑法》的「枉法裁判」罪這種地步，但就是嚴重侵害當事人權益，包括法官未負起發現真實的義務、法官智識不夠導致裁判錯誤，這都是嚴重侵犯當事人權益的裁判行為。</p><p>我國民事訴訟在二審時，只要訴訟金額不超過150萬就不得上訴最高法院。即使上訴到最高法院，最高法院由於是法律審，對於二審法院未能克盡調查事實之義務，從很多判例看來是不受理上訴的。唯一的救濟管道就是請求司法院進行個案評鑑，在法官受懲戒後，繼續聲請再審。</p><p>一個錯誤判決放在司法院的網站上供大家瀏覽，一放就五年、十年，才有可能再審翻案，這段期間的折磨，違失法官對當事人所造成的精神痛苦以及時間、金錢上的耗損，難道國家不該負起賠償責任嗎？國家在賠償後不該向法官求償嗎？</p><p>【即時論壇徵稿】</p> #李靜修 #其他 #蘋果日報 #2017-05-13
+
+# 蔡正皓
+## backgrounds
+- 其他
+
+## articles
+### 2017/05/13 GMT0+8:00 http://www.storm.mg/article/264837
+- <h2><a href="http://www.storm.mg/article/264837" target="_blank">法操觀點》最高法院法官由總統圈選！政治介入司法？</a></h2><p>司改國是會議在2017年4月24日做出決議，改革我國最高法院法官的選任制度，建議分為三階段制，第一階段由司法院提出缺額3倍的人選，第二階段由多元組成的遴選委員會將人數剔除到缺額2倍，最後由總統圈選。</p><p>這樣的制度變革，引起輿論上眾多討論。絕大多數質疑認為，這個制度變革讓總統可以堂而皇之把手伸進司法內，更被形容為「總統行政、司法一把抓」。</p><p>最高法院做為我國司法權的頂點，最高法院法官人事當然對我國司法舉足輕重，這項變革引起如此大的關注並不驚人。要分析其中的問題點所在，我們可以從國外的經驗、以及最高法院所扮演的角色切入。</p><p>眾所周知，最高法院是我國的終審法院，也就是三級三審制的終點。但是，最高法院的角色並不只是單純的個案救濟，而是有著更為宏觀的意義。因為全國上下就只有一座最高法院，所以最高法院也肩負「統一法律見解」的重責大任，也就是透過最高法院的裁判，將全台各地法院對同樣法條的分歧解釋，合併定於一尊。如此一來，就可以增加法院適用法律的穩定度，提升人民對法院裁判的可預測性。</p><p>不同於專職解釋憲法的大法官，最高法院所涉獵的統一解釋，即於民事、刑事、甚至其他特別法的領域。兩者同樣在司法權上都是不可或缺，兩者所做出來的決定都具備全國性拘束力，並沒有孰高孰低的問題。毋寧說，大法官是自成一格的憲法體系，而最高法院則是法律審判的全國司法體系頂點，兩者各司其職，只有在議題涉及憲法爭議時才會彼此交錯。</p><p>根據法官法第4條規定，司法院應設置「人事審議委員會」，主掌一切與法官相關的人事，包括任免、考核、調遷、獎懲等等，因此最高法院法官的遴選自然也在其業務範圍內。</p><p>但現行制度最讓人詬病之處，就是司法院人事審議委員會的組成，在總共27人的委員中，除了司法院院長是當然委員兼任主席外，其中11人由司法院長指定、12人是法官代表，只有3人是司法體系外部人士，可以說，整個人事委員會，都是由司法權內部人士所把持。更甚者，這3個外部委員，在某些議題中，還「沒有表決權」，更加深司法權在人事事務上的壟斷。</p><p>當然，這樣的組織方式，是用在高等法院以下的法官時，或許還無可厚非。但，若同樣用在最高法院的法官，基於最高法院的重要性，如果，最高法院法官的遴選，沒有足夠外部監督，對外將欠缺民主正當性、難以使人民信服，對內更可能導致「近親繁殖」。</p><p>根據世界其他國家的經驗，對於最高法院法官的選任，大抵可以分為兩種模式。第一種，是導入民選機關的同意權，這種模式，以美國為代表。美國聯邦最高法院的法官必須要總統提名，並經過國會同意後，才可以上任。我國大法官也是採取這種選任模式，而這種慎重的選任方式，或許正彰顯了美國聯邦最高法院和我國大法官憲政高度。</p><p>另一種，則是由公正、組成多元的選任委員會來遴選，以德國為例，德國聯邦層級的法官，是由法官選任委員會(Richterwahlausschuß)，聯邦總統只有形式上的選任權，不能對法官選任委員會的決定予以置喙。而法官選任委員會的組成，一半是各邦政府中主掌司法事務的部長，另一半則是經國會依比例代表制選任出來的議員。因此，法官選任委員會的成員，本來就涵蓋了行政與立法兩權的制衡作用。</p><p>從這幾個國家的模式來看，似乎很少有由總統直接決定人選的做法，通常都會加入相當的權力制衡。畢竟，就算是只讓總統二選一，也很難讓司法自外於總統的個人意向。</p><p>當然，並不是外國的月亮一定比較圓。但我們可以換個角度來想，當司法改革會議花費不少精力爭論「政治任命」一詞是否妥當時，是否正反映了其實司改委員心中，也對於總統直接圈選最高法院法官的制度有疑慮？</p><p>正如前述，我國現行法下的人事審議委員會制度，光是成員組成就極度不均衡。只是因為人事審議委員會採取閉門會議，所以，長期以來，並沒有受到太多公開質疑。如今全國司改會議把這個問題放上檯面，引起公眾關注，當然意義非凡。但若直接將法官選任方式修改成3階段，而讓總統在最終階段擁有單獨圈選權，稍嫌武斷，更顯得矯枉過正。</p><p>關鍵在於，選任程序有具有足夠的民主正當性和外部監督，不能讓最高法院法官這種重要職位的選任，把持在特定政府權力或特定人手裡。所以，先從人事審議委員會成員比例開始改革，或許才是比較穩當的做法。畢竟，雖然總統是全民直選，或許擁有足夠的民主正當性，也不代表他可以「贏者全拿」。無論如何，最強調公正獨立的司法，更不應該成為勝者的戰利品。</p><p>【司改新決議】支持人民「直接聲請」評鑑司法官！</p><p>＊本文原刊《法操》司想傳媒，授權轉載。</p> #蔡正皓 #其他 #第二組 #最高法院法官晉用 #風傳媒 #2017-05-13
+
+# 王子榮
+## backgrounds
+- 法官
+
+## articles
+### 2017/05/14 GMT0+8:00 http://pnn.pts.org.tw/main/2017/05/14/%E7%A5%9E%E9%9A%B1%E6%96%BC%E9%99%A2%E6%AA%A2%E9%AB%94%E5%88%B6%E7%9A%84%E7%84%A1%E8%87%89%E4%BA%BA%E2%94%80%E2%94%80%E8%AB%87%E6%9B%B8%E8%A8%98%E5%AE%98%E5%9B%B0%E5%A2%83/
+- <h2><a href="http://pnn.pts.org.tw/main/2017/05/14/%E7%A5%9E%E9%9A%B1%E6%96%BC%E9%99%A2%E6%AA%A2%E9%AB%94%E5%88%B6%E7%9A%84%E7%84%A1%E8%87%89%E4%BA%BA%E2%94%80%E2%94%80%E8%AB%87%E6%9B%B8%E8%A8%98%E5%AE%98%E5%9B%B0%E5%A2%83/" target="_blank">神隱於院檢體制的無臉人──談書記官困境</a></h2><p>文 / 王子榮</p><p>在日本動畫大師宮崎駿廣為人知的「神隱少女」電影中，主角千尋在神靈界的冒險過程，除了吸睛的白龍以外，還有一個默默陪伴千尋的角色，是一個默不作聲、身穿黑袍的無臉人（或稱無臉男），不管千尋去哪裡，他總是靜靜的陪著千尋，其他人都看不到他的存在，只有千尋自己知道，而無獨有偶，在法院檢察署裡面，也有類似這樣的角色，也恰巧身著黑色袍子，也常常被人忽略，就是書記官這樣的職位。</p><p>我們在社會司法新聞中，會看到某位檢察官指揮查獲食安、環境污染等並破獲大案，又或者是哪位法官承審哪些矚目案件，寫了幾百頁的判決，是多麼辛苦，縱使不是檢察官或法官刻意追求，但不可否認檢察官或法官往往是司法體制中鎂光燈的焦點，但其實支援這一切司法工作最重要的角色是書記官，其在個案中所付出的心力不亞於法官、檢察官，卻常常遭人忽略。</p><p>被忽略的幕後推手 親民司法忙翻天</p><p>以院方的刑事案件為例，打從收案開始，書記官就必須細心整卷，要對照卷宗數目，然後隨著法官對案件的進行，必須做好很多開庭前的前置工作及開庭後的善後工作，證人、鑑定機關事前的聯繫，事後開庭筆錄的聽打，還有要接續進行的各項調查的公文往返，當然還包括最後判決製作完成後的校對與製作，甚至包括判決確定要送刑事執行的相關文書作業，往往法官只有寥寥數語交代幾句話，但書記官卻要想辦法去完成這些工作，如果說書記官是法官的左右手並不為過！</p><p>在上述這麼多的審判行政工作外，對於書記官最大的惡夢就是接聽案件當事人的電話，法官檢察官作為程序的主體，以及相關行為倫理規範，當然不會、也不宜讓當事人直接打電話跟法官、檢察官聯絡，所以當事人往往是直接聯絡書記官，如果遇到比較不理智的當事人，書記官幾乎變成坊間的客服電話人員，加上配合司法行政所謂親民司法的要求，讓書記官同仁必須花費很多無謂時間去處理當事人實際上的情緒問題，這樣的情況越演越烈，如果遇到其他同辦公室書記官也請假，那可真的變成客服中心，一位書記官要顧上好幾支客服來電，根本就耽誤了日常處理公事的時間。</p><p>上天堂住牢房全憑法官 待遇升遷優化才是王道</p><p>法官法檯下方的書記官。(圖為嘉義地院模擬觀審法庭資料畫面，非實際審理案件情形)</p><p>對於書記官而言，更大的問題是工作環境往往取決於搭配的法官，如果搭配的法官是具有同理心也較為隨和的，那彼此之間工作氣氛就甚為融洽，書記官跟法官間成為莫逆之交也多所聽聞，但如果法官是較為情緒化的，甚至不假詞色的，那書記官的工作環境就會變得很高壓，惶惶終日。更惡劣的是有些法官會再開庭當下因為書記官打字較為緩慢而大發雷霆，這都是沒有把書記官同仁當作重要伙伴對待，而由法官的人格特質來決定書記官的工作環境，本身就是充滿人治而缺乏制度，就不免變成遇到好的法官上天堂，遇到不好的法官彷彿住牢房，只能趕快期待換法官，才能迎來期滿出監的一天。</p><p>書記官過往要求只要高中畢業即得應試，但隨著教育普及，近年來書記官同仁均具備大學學歷，甚至有法律系專業背景比比皆是，這樣的書記官往往是法官工作上可以信賴的伙伴，但書記官卻仍是一開始僅以四等加以任用，而縱使國家有開設三等職缺書記官也是僧多粥少。筆者認為未來其實應放寬書記官任職的官等，以三等書記官為考試任用的常態，這樣才能實質上提升書記官地位，另外也應該讓書記官有更廣泛的升遷管道，讓書記官也能保有工作的前景，並建立法官與書記官間的工作準則，才能避免往往是依照搭配的法官人格特質來決定工作環境。</p><p>在這次的司改國是會議中，在人事任用或工作環境改上，似乎只聚焦、獨厚於法官及檢察官上，作為司法體制中不可獲缺的書記官，彷彿落得爹不疼娘不愛的窘境，這樣的漠視對書記官是一種歧視、是一種傷害，也是對司法體制進步的一種阻礙，如果希望司法環境變得更好，那就不該繼續對書記官漠然，而是認真傾聽他們的需求，才是正本清源之道。</p><p>作者為雲林地方法院法官本文內容不代表公共電視立場</p> #王子榮 #法官 #書記官 #公共電視PNN #2017-05-14
+
+# 林宜禎
+## backgrounds
+- 其他
+
+## articles
+### 2017/05/15 GMT0+8:00 http://www.storm.mg/article/264080
+- <h2><a href="http://www.storm.mg/article/264080" target="_blank">觀點投書：司法為民？ 阿根廷是，台灣不是！</a></h2><p>觀察新政府召集的司改國是會議演化過程，越看越像是一場鬧劇，從一開始委員人選被質疑黑箱作業，之後被批評決議像放天燈，現在竟又發生長期不滿工作量過大的基層司法官紛紛掛冠求去。</p><p>提到司法官的工作量，讓我想起曾任法務部長的馬英九前總統，初上任時曾說過的一句經典名言：「人權侵害百分之八九十來自政府機關」，所以其實司法官的工作量，有許多是來自政府本身，因侵害百姓人權而發生的爭訟案件。</p><p>人民因公務人員在行使公務時，傷害到自己的人權，看似可以提起行政訴訟來對抗國家暴力，但若司法官長期以來只憑自己的自由心證，不依證據法則審理案件，而做出視人民權利如糞土的判決，人民當然只能不斷興訟來尋求公理正義。</p><p>仔細研究台灣司法虐民的案件，除了像洪仲丘、徐自強等冤案外，應屬稅務爭訟最多、最普遍。究其原因，國稅人員受到需達成稅收目標所迫，以及獎金與考績所誘，而不斷開出冤錯假稅單，光是103-105三年期間，法務部行政執行署就接到近2000萬件新增欠稅欠費的待強制執行案件，造成許多人民不服而去打稅務官司。</p><p>因此我們不難想像民告官的司法案件，應有許多是稅案。確實沒錯，若以行政法院承審的三、四十類爭訟案件來看，稅捐案件總是占第一位，遠遠超過其他案件量。若以2006-2015年這十年來觀察，高等行政法院一審終結案件中，稅捐案件就占32.3%；最高行政法院比例更高達42.0%的案件都是稅捐爭訟。這真的是台灣特有、且嚴重的賦稅人權問題。</p><p>若問人民打官司會贏嗎？我要告訴你：不會！因為據北商大財稅系黃士洲副教授統計，稅局勝訴率達94%，人民勝訴率只有6%而已。而且若不特別看稅案，據我所知像林秋華等行政法官，他們在一年內承審的各類案件，甚至100%都判人民敗訴，這種官官相護的現象，讓法院前面豎立的「司法為民」精神標語，成為一個天大笑話與謊言。</p><p>台灣不僅法官欠缺財稅專業，判決書常直接複製稅官的說詞，判人民敗訴，而且，台灣的稅制更欺民，除了放縱稅官無憑證就可認定人民該補的稅金，之後還會再加上滯納金及好幾倍的罰鍰，而開出讓人憂鬱纏身的補稅單。像某知名藝人本來只欠稅200萬，收到的補稅單卻達800多萬，害他為了繳稅沒日沒夜地工作，最後罹癌，真是台灣的悲慘世界。</p><p>這也讓我不禁想起去年全球首席大法官會議，我因為工作關係，親耳聽到阿根廷布宜諾斯艾利斯國家法院Waiter Jose Candela法官說：「法官必須是人性化的，並且應該跟人民感同身受。有經濟困難情況人民，應該受國家的幫助，幫助他或她面對不能夠支付稅的問題。法官會在特定情況下，適當地調整納稅人支付不同的稅收，讓他可以還清所積欠的債務。」他的這段話，讓我眼淚快要掉下，一來是為台灣人民難過，一來是為阿根廷人民高興，因為他們的法院才是真正的「司法為民」啊！</p><p>＊作者為公民記者、攝影師</p> #林宜禎 #其他 #稅法改革 #風傳媒 #2017-05-15
+
 
 
 
@@ -4012,7 +4100,7 @@ ___
 <p>
 2017年2月起，總統府召開<a href="https://justice.president.gov.tw/" target="_blank">司法改革國是會議</a>，會議期間，媒體上出現大量司法制度相關投書，此為民間司改會所製作之投書整理。
 </p>
-<p>本投書整理更新時間：2017年05月05日 17:39:41</p>
+<p>本投書整理更新時間：2017年05月15日 19:10:24</p>
 <ul>
   <li><a href="http://bit.ly/pj-links2" target="_blank">司改國是會議會議資料彙整</a></li>
   <li><a href="https://www.jrf.org.tw/" target="_blank">民間司改會網站</a></li>
@@ -4141,6 +4229,7 @@ ___
     - 陳重言
     - 林育杉
     - 陳維鎧
+    - 劉昌坪
   - 學者
     - 李念祖
     - 李復甸
@@ -4268,6 +4357,9 @@ ___
     - 張書瑋
     - 洪博學
     - 廖俊翔
+    - 李靜修
+    - 蔡正皓
+    - 林宜禎
 
 - 投書平台
   - 蘋果日報
@@ -4357,6 +4449,7 @@ ___
   - 政治力介入司法
   - 數位政策
   - 新創法律
+  - 書記官
   - 最高法院法官晉用
   - 有錢判生無錢判死
   - 案件分流
@@ -4552,4 +4645,10 @@ ___
   - 2017-05-03
   - 2017-05-04
   - 2017-05-05
+  - 2017-05-06
+  - 2017-05-08
+  - 2017-05-11
+  - 2017-05-13
+  - 2017-05-14
+  - 2017-05-15
 
